# digitex-rest-python

./: README.MD  pyproject.toml  setup.py
dgtx/: __init__.py  client.py  decorators.py  extra_data_classes.py  metaclasses.py  private.py  public.py
dgtx/digitex_rest_core/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
docs/: .buildinfo  genindex.html  get_started.html  helpers.html  index.html  objects.inv  private.html  public.html  rest_api_endpoints.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  get_started.doctree  helpers.doctree  index.doctree  private.doctree  public.doctree  rest_api_endpoints.doctree
docs/_sources/: get_started.rst.txt  helpers.rst.txt
docs/_static/: jquery-3.5.1.js  searchtools.js  underscore-1.13.1.js
docsrc/: conf.py  get_started.rst  index.rst  rest_api_endpoints.html  rest_api_endpoints.rst
examples/: api_showcast.py  cancel_order.py  create_order.py  get_account_balance.py  get_currencies.py  get_exchange_info.py  get_markets.py  get_my_open_orders.py  get_my_order_history.py  get_my_order_status.py  get_my_position.py  get_my_trade_history.py  get_ohlcv.py  get_order_book.py  get_recent_trades.py  ping.py
source/: conf.py  rest_api_endpoints.html
tests/: client_test.py  test_get_balance.py  test_get_currencies.py  test_get_exchange_info.py  test_get_k_lines.py  test_get_markets.py  test_get_order_book.py  test_get_order_history.py  test_get_order_status.py  test_get_orders.py  test_get_position.py  test_get_recent_trades.py  test_get_trade_history.py
(+41 files in other folders)
